Color wheel snaps to center: loosing hue if light value is down to zero. #59424

Closed
opened 2018-12-15 20:35:16 +01:00 by Julio Cargnin Pereira · 5 comments

System Information
Operating system: OS X High Sierra 10.13.6 (17G65)
Graphics card:
AMD Radeon HD 6750M 1024 MB
Intel HD Graphics 3000 512 MB

Blender Version
Version: 2.80 (2.80 2018-12-14, Blender Foundation)

Color wheel snaps to center: loosing hue if light value is down to zero.

Exact steps for others to reproduce the error
ColorWheelBug.mp4

**System Information** Operating system: OS X High Sierra 10.13.6 (17G65) Graphics card: AMD Radeon HD 6750M 1024 MB Intel HD Graphics 3000 512 MB **Blender Version** Version: 2.80 (2.80 2018-12-14, Blender Foundation) Color wheel snaps to center: loosing hue if light value is down to zero. **Exact steps for others to reproduce the error** [ColorWheelBug.mp4](https://archive.blender.org/developer/F5964037/ColorWheelBug.mp4)

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-17 18:51:40 +01:00

I've uploaded a potential fix for this issue: D4090

I've uploaded a potential fix for this issue: [D4090](https://archive.blender.org/developer/D4090)

This issue was referenced by 1eafa91f64

This issue was referenced by 1eafa91f647143b565914b71480bb90cd941e0ed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59424
No description provided.