Fix T59424: color wheel snaps to center, losing hue when value is zero.

Differential Revision: https://developer.blender.org/D4090